--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "eddieduro-portfolio-2",
-  "version": "1.0.0",
-  "description": "",
+  "version": "0.0.0",
+  "description": "some NPM test",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/eddieduro/eddieduro-portfolio-2/issues"
   },
-  "homepage": "https://github.com/eddieduro/eddieduro-portfolio-2#readme"
+  "homepage": "https://github.com/eddieduro/eddieduro-portfolio-2#readme",
+  "keywords": [
+    "npm"
+  ]
 }
